# Smart-industrial-robotic-solution-for-industrial-inspection

./: README.md
raspberry PI5/ros_pub_sub/: CMakelists.txt  README.md  package.xml
raspberry PI5/ros_pub_sub/scripts/: listener.py  talker.py
sensors/: .gitignore  README.md  add multi-sensor system
