<?xml version="1.0"?>
<package format="2">
  <name>ros_pub_sub</name>
  <version>0.0.0</version>
  <description>Simple ROS Publisher and Subscriber</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
